# labs2.1

./: CMakeLists.txt
lab2/: CMakeLists.txt  binim.cpp  binim.h  lab2.cpp
lab3/: CMakeLists.txt  lab3.cpp  list.h  shared_ptr.h  unique_ptr.h  vector.h
lab4/: CMakeLists.txt  function.cpp  function.h  lab4.cpp
