# CMakeList.txt: проект CMake для lab3.2.1; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

# Добавьте источник в исполняемый файл этого проекта.
add_executable (lab2 "lab2.cpp" "binim.h" "binim.cpp")

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
